Code optimization for AdminPermission